	  found in README.md file. (#108)
	* Performance improvements based on (#131).
	* Provided callbacks to retrieve notifications about events when the synth engine runs
	  out of available partials. (#111)
	* Improved emulation accuracy of partial allocator implemented in old-gen devices. (#109)
	* Invalid short MIDI messages are no longer tolerated but ignored. (#134)

2025-12-26:

	2.7.3 released.

	* When a SysEx message touches the timbre number of the Patch Temp memory area for a part,
	  all currently playing notes on that part now start to decay instantly. This is similar to
	  the way a Program Change event is handled, and it's how the real h/w does this. (#132)

2025-04-03:

	2.7.2 released.

	* Fixed compatibility issues when building with CMake 4.0 that no longer supports
	  build scripts requiring minimum CMake version below 3.5. (#127)

2023-10-11:

	2.7.1 released.

	* Fixed initialisation of ROMInfo objects which caused crashes of client applications
	  when accessing the static ROM data. Currently, only builds with clang-17.0 are affected
	  which is used in MSYS2 environment. (#115)

2022-07-23:

	2.7.0 released.

	* Added support for MT-32 control ROM v.2.03. (#92)
	* Provided two new functions for retrieving names of all standard timbres and their
	  "sound groups". These also make it easier to retrieve names of custom timbres. (#91)

2022-04-16:

	2.6.3 released.

	* To improve portability on some systems where multiple ABIs are supported with different
	  calling conventions (notably 32-bit Windows), all the public C functions now declare
	  the C calling convention explicitly, that makes a shared library build compatible with
	  a project who utilises another calling convention. (#89)
	* Function mt32emu_configure_midi_event_queue_sysex_storage from the C-compatible API
	  is now correctly exported in the declaration. Previously, it was only accessible when
	  building the library statically or via the plugin-like API. (#90)

2022-03-06:
