@@ -137,7 +137,8 @@ typedef enum {
 	MT32EMU_SERVICE_VERSION_4 = 4,
 	MT32EMU_SERVICE_VERSION_5 = 5,
 	MT32EMU_SERVICE_VERSION_6 = 6,
-	MT32EMU_SERVICE_VERSION_CURRENT = MT32EMU_SERVICE_VERSION_6
+	MT32EMU_SERVICE_VERSION_7 = 7,
+	MT32EMU_SERVICE_VERSION_CURRENT = MT32EMU_SERVICE_VERSION_7
 } mt32emu_service_version;
 
 /* === Report Handler Interface === */
@@ -390,6 +391,10 @@ typedef union mt32emu_service_i mt32emu_service_i;
 	mt32emu_boolean (MT32EMU_C_CALL *getSoundGroupName)(mt32emu_const_context context, char *sound_group_name, mt32emu_bit8u timbre_group, mt32emu_bit8u timbre_number); \
 	mt32emu_boolean (MT32EMU_C_CALL *getSoundName)(mt32emu_const_context context, char *sound_name, mt32emu_bit8u timbre_group, mt32emu_bit8u timbre_number);
 
+#define MT32EMU_SERVICE_I_V7 \
+	void (MT32EMU_C_CALL *setMasterVolumeOverride)(mt32emu_const_context context, mt32emu_bit8u volume_override); \
+	mt32emu_bit8u (MT32EMU_C_CALL *getMasterVolumeOverride)(mt32emu_const_context context);
+
 typedef struct {
 	MT32EMU_SERVICE_I_V0
 } mt32emu_service_i_v0;
@@ -439,6 +444,17 @@ typedef struct {
 	MT32EMU_SERVICE_I_V6
 } mt32emu_service_i_v6;
 
+typedef struct {
+	MT32EMU_SERVICE_I_V0
+	MT32EMU_SERVICE_I_V1
+	MT32EMU_SERVICE_I_V2
+	MT32EMU_SERVICE_I_V3
+	MT32EMU_SERVICE_I_V4
+	MT32EMU_SERVICE_I_V5
+	MT32EMU_SERVICE_I_V6
+	MT32EMU_SERVICE_I_V7
+} mt32emu_service_i_v7;
+
 /**
  * Extensible interface for all the library services.
  * Union intended to view an interface of any subsequent version as any parent interface not requiring a cast.
@@ -452,6 +468,7 @@ union mt32emu_service_i {
 	const mt32emu_service_i_v4 *v4;
 	const mt32emu_service_i_v5 *v5;
 	const mt32emu_service_i_v6 *v6;
+	const mt32emu_service_i_v7 *v7;
 };
 
 #undef MT32EMU_SERVICE_I_V0
@@ -461,5 +478,6 @@ union mt32emu_service_i {
 #undef MT32EMU_SERVICE_I_V4
 #undef MT32EMU_SERVICE_I_V5
 #undef MT32EMU_SERVICE_I_V6
+#undef MT32EMU_SERVICE_I_V7
 
 #endif /* #ifndef MT32EMU_C_TYPES_H */
